Fixed image focus tooltip layout bug

--- a/www/css/style-ultramodern.mac.css
+++ b/www/css/style-ultramodern.mac.css
@@ -5822,8 +5822,8 @@ th.mathjax-inline-container {
 	display: block;
 	position: absolute;
 	margin: auto;
-	left: 0;
-	right: 0;
+	left: 50%;
+	transform: translateX(-50%);
 	bottom: 10px;
 	padding: 8px 15px 9px 15px;
 	font-size: 1.25rem;
@@ -5833,6 +5833,7 @@ th.mathjax-inline-container {
 	opacity: 0.0;
 	transition: opacity 0.15s ease;
 	pointer-events: none;
+	white-space: nowrap;
 }
 @supports (width: -moz-fit-content) {
 	#images-overlay div::after {
